<resources>
    <string name="app_name">NewsApp</string>

    <string name="news_title">Nullam fringilla metus vitae turpis viverra ultrices.</string>
    <string name="news_title_2">Phasellus sit amet posuere mi. Etiam tincidunt egestas neque in semper</string>
    <string name="news_description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="news_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="news_source">Times Of India</string>
    <string name="news_time">13 hours ago</string>

    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="read_full_article">Read Full Article</string>

    <string name="msg_offline">You\'re offline.</string>
    <string name="msg_end_of_the_list">You\'ve eached the end of list.</string>
    <string name="msg_something_wrong">Oops! Something went wrong. Please try again.</string>
    <string name="msg_connection_error">Please check your internet connectivity and try again.</string>


</resources>
