<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dimen_24">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_250"
            android:background="@drawable/image_bg"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimen_16" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorHeader"
            app:layout_constraintBottom_toBottomOf="@id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />


        <TextView
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/google_sans_medium"
            android:maxLines="1"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="The Times Of India" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/google_sans_bold"
            android:maxLines="3"
            android:textColor="@color/colorBlack_80"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/source"
            tools:text="@string/news_title_2" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/google_sans_regular"
            android:maxLines="1"
            android:paddingBottom="@dimen/dimen_16"
            android:textColor="@color/colorBlack_50"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/news_time" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:fontFamily="@font/google_sans_regular"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/colorBlack_65"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toTopOf="@+id/content"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/time"
            tools:text="@string/news_description" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:fontFamily="@font/google_sans_regular"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/colorBlack_65"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="@string/news_content" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_read_full"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginTop="@dimen/dimen_24"
            android:fontFamily="@font/google_sans_medium"
            android:text="@string/read_full_article"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>